# SimpliDo

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py  update_version.py
app/core/: security.py
app/database/: db.py
app/models/: task.py  user.py
app/routes/: task.py  user.py
app/schemas/: task.py  user.py
app/services/: task_service.py  user_service.py
